add image for events

--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
                       <p></p>
                     
                       <h3><em>What are SMART physical scientists interested in?</em></h3>
+                      <div><img src="images/nicolettaPublicLectureImage.png" width=500></div>
                       <h4><a href='https://www.eventbrite.com/e/what-are-smart-physical-scientists-interested-in-tickets-61997990659'>Registration Link</a></h4>
                       <div>Dr. Nicoletta Gnan, Sapienza University of Rome</div>
                       <div>Tuesday, 28 May 2019, 18:00</div>
