--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
                       <h3><em>Twisted topological tangles: or the knot theory of knitting</em></h3>
                       <div>Dr. Sabetta Matsumoto, Georgia Institute of Technology</div>
                       <div>Wednesday, 29 May 2019, 14:00</div>
+                      <div>Seminar Room, NSQI building, University of Bristol</div>
                       <p></p>
                     
                       <h3><em>What are SMART physical scientists interested in?</em></h3>
