--- a/index.html
+++ b/index.html
@@ -432,25 +432,18 @@
                         </th>
                       </tr>
                       <tr>
-                        <td><a href="http://www.bristol.ac.uk/earthsciences/people/katharine-v-cashman/overview.html">Kathy
-                            Cashman</a></td>
-                        <td><a href="http://www.bristol.ac.uk/biology/people/luca-giuggioli/overview.html">Luca
-                            Giuggioli</a></td>
-                        <td><a href="http://www.bris.ac.uk/biochemistry/people/ross-l-anderson/index.html">Ross
-                            Anderson</a></td>
+                        <td><a href="http://www.bristol.ac.uk/earthsciences/people/katharine-v-cashman/overview.html">Kathy Cashman</a></td>
+                        <td><a href="http://www.bristol.ac.uk/biology/people/luca-giuggioli/overview.html">Luca Giuggioli</a></td>
+                        <td><a href="http://www.bris.ac.uk/biochemistry/people/ross-l-anderson/index.html">Ross Anderson</a></td>
                       </tr>
                       <tr>
-                        <td><a href="https://seis.bristol.ac.uk/%7Eglhmm/">Heidy
-                            Mader</a></td>
+                        <td><a href="https://seis.bristol.ac.uk/%7Eglhmm/">Heidy Mader</a></td>
                         <td><a href="http://hauertlab.com/">Sabine Hauert</a></td>
-                        <td><a href="https://woolfsonlab.wordpress.com/">Dek
-                            Woolfson</a></td>
+                        <td><a href="https://woolfsonlab.wordpress.com/">Dek Woolfson</a></td>
                       </tr>
                       <tr>
-                        <td><a href="http://www.bristol.ac.uk/earthsciences/people/richard-a-brooker/overview.html">Richard
-                            Brooker</a></td>
-                        <td><a href="http://www.bristol.ac.uk/engineering/departments/engineering-mathematics/people/lucia-marucci/index.html">Lucia
-                            Marucci</a></td>
+                        <td><a href="http://www.bristol.ac.uk/earthsciences/people/richard-a-brooker/overview.html">Richard Brooker</a></td>
+                        <td><a href="http://www.bristol.ac.uk/engineering/departments/engineering-mathematics/people/lucia-marucci/index.html">Lucia Marucci</a></td>
                         <td>
                           <h3>Biology</h3>
                         </td>
@@ -462,6 +455,11 @@
                             Rossiter</a></td>
                         <td><a href="http://www.bristol.ac.uk/biology/people/christos-c-ioannou/">Christos
                             Ioannou</a></td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td><a href="http://www-users.york.ac.uk/~hg884">Hermes Gadêlha</a></td>
+                        <td></td>
                       </tr>
                     </tbody>
                   </table>
