--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <li>
                       <b>Hermes Gadelha</b>, Engineering Mathematics, University of Bristol<br>
                       <em>The wiggly mathematical tale of the sperm tail and other fables</em><br>
-                      LG22, Fry building, Tuesday, 11th February, 14&#58;00 &#45; 15&#58;00.<br>
+                        TBA <div class=small><del>LG22, Fry building, Tuesday, 11th February, 14&#58;00 &#45; 15&#58;00.</del><br></div>
                       <div class=small>(Fluids and Materials)</div>
                     </li>
 
