cancel all events for cov19

--- a/index.html
+++ b/index.html
@@ -127,61 +127,64 @@
 
                   <h1>Upcoming events and seminars:</h1>
 
-                  <ol class="news_box">
+                  <button type="button" class="collapsible">All Events Cancelled</button>
+                  <div class="collapse_box">
+                    <ol class="news_box">
 
+                      <li>
+                        <b>Erwin Reisner</b>, University of Cambridge<br>
+                        TBA<br>
+                        Tuesday, 5th March, 16&#58;00.
+                        <div class=small>(FMM)</div>
+                      </li>
 
+                      <li>
+                        <b>Guillaume Salbreux</b>, Francis Crick Institute<br>
+                        TBA<br>
+                        LG22, Fry building, Tuesday, 12th March, 14&#58;00.
+                        <div class=small>(Fluids and Materials)</div>
+                      </li>
 
-                    <li>
-                      <b>Erwin Reisner</b>, University of Cambridge<br>
-                      TBA<br>
-                      Tuesday, 5th March, 16&#58;00.
-                      <div class=small>(FMM)</div>
-                    </li>
+                      <li>
+                        <b>Alice Pyne</b>, UCL<br>
+                        TBA<br>
+                        Wednesday, 25th March, 14&#58;00.
+                        <div class=small>(Physics, Soft Matter)</div>
+                      </li>
 
-                    <li>
-                      <b>Guillaume Salbreux</b>, Francis Crick Institute<br>
-                      TBA<br>
-                      LG22, Fry building, Tuesday, 12th March, 14&#58;00.
-                      <div class=small>(Fluids and Materials)</div>
-                    </li>
+                      <li>
+                        <b>Joshua Robinson</b>, University of Bristol<br>
+                        TBA<br>
+                        Wednesday, 1st April
+                        <div class=small>(Physics, Soft Matter)</div>
+                      </li>
 
-                    <li>
-                      <b>Alice Pyne</b>, UCL<br>
-                      TBA<br>
-                      Wednesday, 25th March, 14&#58;00.
-                      <div class=small>(Physics, Soft Matter)</div>
-                    </li>
+                      <li>
+                        <b>Pablo Cincotta</b>, University of Sheffield<br>
+                        TBA<br>
+                        LG22, Fry building, Tuedsay, 5th May, 14&#58;00,
+                        <div class=small>(Fluids and Materials)</div>
+                      </li>
 
-                    <li>
-                      <b>Joshua Robinson</b>, University of Bristol<br>
-                      TBA<br>
-                      Wednesday, 1st April
-                      <div class=small>(Physics, Soft Matter)</div>
-                    </li>
+                      <li>
+                        <b>Steve Armes</b>, University of Sheffield<br>
+                        TBA<br>
+                        Tuedsay, Friday, 15th May,
+                        <div class=small>(FMM)</div>
+                      </li>
 
-                    <li>
-                      <b>Pablo Cincotta</b>, University of Sheffield<br>
-                      TBA<br>
-                      LG22, Fry building, Tuedsay, 5th May, 14&#58;00,
-                      <div class=small>(Fluids and Materials)</div>
-                    </li>
+                      <li>
+                        <b>Hermes Gadelha</b>, Engineering Mathematics, University of Bristol<br>
+                        <em>The wiggly mathematical tale of the sperm tail and other fables</em><br>
+                        TBA
+                        <div class=small>(Fluids and Materials)</div>
+                      </li>
 
-                    <li>
-                      <b>Steve Armes</b>, University of Sheffield<br>
-                      TBA<br>
-                      Tuedsay, Friday, 15th May,
-                      <div class=small>(FMM)</div>
-                    </li>
-
-                    <li>
-                      <b>Hermes Gadelha</b>, Engineering Mathematics, University of Bristol<br>
-                      <em>The wiggly mathematical tale of the sperm tail and other fables</em><br>
-                      TBA
-                      <div class=small>(Fluids and Materials)</div>
-                    </li>
-
-                  </ol>
-
+                    </ol>
+                  </div>
+                  <div class="cov19_box">
+                    <img src="https://www.brentfordfc.com/siteassets/images/creative-assets/0_home.png/Large">
+                  </div>
                 </div>
 
                 <button type="button" class="collapsible">People</button>
